# deception-ai

./: .gitignore  Dockerfile  LICENSE  README.md  coverage.xml  docker-compose.yml  env.example  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: actions.py  agent_runner.py  contexts.py  fsm.py  game_loop.py  game_setup.py  game_store.py  lock.py  main.py  players.py  prompts.py  roles.py  streams.py  websocket_hub.py
app/agents/: __init__.py  ag2_backend.py  autogen_config.py  base.py  discussion_agent.py  factory.py  json_schema.py  scene_bullets_picker.py  scene_picker.py  solution_picker.py
app/api/: deps.py  models.py  routes.py
app/assets/: __init__.py  registry.py  singleton.py  startup.py
app/core/: __init__.py  context.py  events.py  game_state_text.py
app/infra/: redis_client.py
app/static/: index.html
app/static/ui2/: package-lock.json  package.json  svelte.config.js  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
app/static/ui2/src/: App.svelte  app.css  index.html  main.ts
app/static/ui2/src/lib/: api.test.ts  api.ts  cards.ts  pov.ts  types.ts
app/static/ui2/src/routes/: Game.svelte  Home.svelte  Home.test.ts
app/turn_processing/: __init__.py  board_context.py  turns.py  validators.py
assets/: README.md
prompts/: accomplice.txt  base_player.txt  forensic_scientist.txt  investigator.txt  murderer.txt  witness.txt
scripts/: coverage.sh  dev.sh  generate_test_assets.py  manual_test.sh
tests/: conftest.py  test_ag2_integration.py  test_agent_runner.py  test_agent_runner_ollama_integration.py  test_assets_loading.py  test_board_context_public_table.py  test_context_layers.py  test_discussion_turns.py  test_fs_scene_bullets_selection.py  test_fs_scene_selection.py  test_fsm_and_streams_scaffolding.py  test_game_api.py  test_mailbox_api.py  test_make_player_spec.py  test_prompt_loading.py  test_role_prompt_loading.py  test_scene_picker.py  test_solution_picker.py  test_structured_output_ollama_integration.py  test_structured_output_wiring.py  test_turn_validation_pipeline.py  test_typed_generic_action_endpoint.py  test_websocket_game_updates.py
tests/assets/: clue_cards.csv  location_and_cause_of_death_tiles.csv  means_cards.csv  scene_tiles.csv
