[project]
name = "deception-ai"
version = "0.1.0"
description = "Deception: Murder in Hong Kong, but for agents (FastAPI + Redis + AG2)."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "MIT" }
authors = [{ name = "Vijay Ramesh" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "redis>=5.0.0",
  # AG2 on PyPI is available as `autogen` (alias of `ag2`).
  "autogen[openai]==0.10.3",
  "python-statemachine>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.28.0",
  "fakeredis>=2.25.0",
  "pytest-cov>=4.1.0",
  "pandas>=2.3.3",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["autogen", "autogen.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-q"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["app"]
# If you later add other top-level packages, include them here.

[tool.coverage.report]
skip_covered = false
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.paths]
source = [
  "app",
  ".venv/*/site-packages/app",
]
